--- a/Veganska varianta/style.css
+++ b/Veganska varianta/style.css
@@ -37,3 +37,113 @@ body {
 /* ------------------------------- */
 /* ----- DOLE BUDE TVOJE CSS ----- */
 /* ------------------------------- */
+
+/* salaty,svacina */
+.recept-meta {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+/* Salat s vlasskymi orechy */
+.hlavni-recept .recept-nazev {
+    font-family: 'Raleway' , sans-serif;
+    font-weight: 800;
+    font-size: 28px;
+}
+
+.recept-nazev {
+    font-family: 'Raleway' , sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    margin: 0;
+}
+
+body {
+    color: white;
+}
+ 
+.hlavni-recept {
+    background-image: url(images/salat.jpg);
+    min-height: 200px;
+}
+
+.recept2 {
+    background-image: url(images/chlebicek.jpg);
+}
+
+.recept3 {
+    background-image: url(images/tacos.jpg);
+}
+
+.recept4 {
+    background-image: url(images/cizrna.jpg);
+}
+
+.recept5 {
+    background-image: url(images/burger.jpg);
+}
+
+.recept {
+    min-height: 90px;
+}
+
+/* mobil */
+ .hlavni-recept, .recept {
+    display: flex;
+    padding: 10px;
+    background-size: cover;
+    background-position: center;
+    border-bottom: 1px solid white;
+    flex-direction: column;
+    justify-content: space-between; 
+} 
+
+.recept-meta  {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+/* tablet */
+@media (min-width: 480px) {
+    .hlavni-recept, .recept {
+        padding: 20px;
+    }
+
+    .hlavni-recept {
+        min-height: 250px;
+    }
+    
+    .recept {
+        min-height: 150px;
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: 50%;
+    }
+    
+    .recept2, .recept4 {
+        border-right: 1px solid white;
+    }
+
+    .recepty {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+/* PC */
+@media (min-width: 860px) { 
+    .doporucujeme {
+        display: flex;
+    }
+    
+    .hlavni-recept {
+        min-height: 400px;
+        border-right: 1px solid white;
+        flex-basis: 33.3%;
+    }
+
+    .recept {
+        min-height: 200px;
+    }
+    
+}
